geo.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: geo
        version: v1
    spec:
      containers:
      - name: geo
        image: gcr.io/wkh-istio-demo/geo
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: geo
  labels:
    app: geo
spec:
  ports:
  - port: 8080
    name: grpc
  selector:
    app: geo
