gms.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: geo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: geo
        version: v1
    spec:
      containers:
      - name: geo
        image: gcr.io/wkh-istio-demo/geo-v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: geo
  labels:
    app: geo
spec:
  ports:
  - port: 8080
    name: grpc
  selector:
    app: geo
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: profile
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: profile
        version: v1
    spec:
      containers:
      - name: profile
        image: gcr.io/wkh-istio-demo/profile-v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: profile
  labels:
    app: profile
spec:
  ports:
  - port: 8080
    name: grpc
  selector:
    app: profile
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rate
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: rate
        version: v1
    spec:
      containers:
      - name: rate
        image: gcr.io/wkh-istio-demo/rate-v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: rate
  labels:
    app: rate
spec:
  ports:
  - port: 8080
    name: grpc
  selector:
    app: rate
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: search
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: search
        version: v1
    spec:
      containers:
      - name: search
        image: gcr.io/wkh-istio-demo/search-v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: search
  labels:
    app: search
spec:
  ports:
  - port: 8080
    name: grpc
  selector:
    app: search
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: www
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: www
        version: v1
    spec:
      containers:
      - name: www
        image: gcr.io/wkh-istio-demo/www-v1
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: www
  labels:
    app: www
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: www
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api 
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: api
        version: v1
    spec:
      containers:
      - name: api
        image: gcr.io/wkh-istio-demo/api-v1
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app: api
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: api
