www.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: www
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: www
        version: v1
    spec:
      containers:
      - name: www
        image: gcr.io/wkh-istio-demo/www
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: www
  labels:
    app: www
spec:
  ports:
  - port: 5000
    name: http
  selector:
    app: www
